syntax="proto3";

package automation;
option go_package = ".;automation";

message OnchainConfigProto {
  string automation_forwarder_logic = 1;
  uint64 check_gas_limit = 2;
  string fallback_gas_price = 3;
  string fallback_link_price = 4;
  uint64 flat_fee_micro_link = 5;
  uint64 gas_ceiling_multiplier = 6;
  uint64 max_check_data_size = 7;
  uint64 max_perform_data_size = 8;
  uint64 max_perform_gas = 9;
  uint64 max_revert_data_size = 10;
  reserved 11 to 16;
}
